Proj - Gallery (Pick Image)

--- a/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/activity_main.xml
+++ b/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,12 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id = "@+id/Linear_layout_upper_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true">
 
         <Button
             android:id="@+id/button_choose_file"
@@ -30,21 +32,26 @@
     <ImageView
         android:id="@+id/image_view_uploading_image"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_margin="20dp" />
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_below="@id/Linear_layout_upper_bar"
+        android:layout_above="@id/progressbar_upload_progress"/>
 
     <ProgressBar
         android:id="@+id/progressbar_upload_progress"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:layout_above="@id/Linear_layout_under_bar"/>
 
     <LinearLayout
+        android:id="@+id/Linear_layout_under_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/button_upload"
@@ -64,4 +71,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
