Proj - Gallery (Show Uploads)

--- a/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/items.xml
+++ b/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_view"
+            android:id="@+id/text_view_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text = "Name"
@@ -21,8 +21,8 @@
             android:layout_marginBottom="8dp"/>
 
         <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="wrap_content"
+            android:id="@+id/image_view_image"
+            android:layout_width="match_parent"
             android:layout_height="200dp"/>
 
     </LinearLayout>
