--- a/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/activity_images.xml
+++ b/MyNewwidget/ProjPhotoUploading/app/src/main/res/layout/activity_images.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ImagesActivity">
 
+    <ProgressBar
+        android:id = "@+id/progress_bar_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent = "true"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id = "@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+</RelativeLayout>
