--- a/MyNewwidget/CommunitySimuator/app/src/main/res/layout/activity_write_content.xml
+++ b/MyNewwidget/CommunitySimuator/app/src/main/res/layout/activity_write_content.xml
@@ -6,11 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".WriteContent">
 
+    <ImageView
+        android:id = "@+id/image_view_your_image"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/uploadbuttonimage"
+        app:layout_constraintBottom_toTopOf="@+id/edit_text_your_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.642" />
+
     <EditText
         android:id="@+id/edit_text_your_title"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="192dp"
         android:hint="Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -18,32 +31,43 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id = "@+id/edit_text_your_content"
+        android:id="@+id/edit_text_your_content"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:background="@drawable/writing_space"
         android:layout_margin="20dp"
-        android:textSize="20sp"
-        android:hint="Write Your Content Here...\n(150 characters limits)"
+        android:background="@drawable/writing_space"
         android:gravity="top"
+        android:hint="Write Your Content Here...\n(150 characters limits)"
         android:maxLength="150"
         android:padding="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_your_title"
-        app:layout_constraintVertical_bias="0.186" />
+        app:layout_constraintVertical_bias="0.18" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar_your_progress"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="76dp"
+        android:layout_height="69dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id = "@+id/button_submit"
+        android:id="@+id/button_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00ff0000"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_your_content" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_your_content"
+        app:layout_constraintVertical_bias="0.873" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
