--- a/MyNewwidget/CommunitySimuator/app/src/main/res/layout/item_layout.xml
+++ b/MyNewwidget/CommunitySimuator/app/src/main/res/layout/item_layout.xml
@@ -2,10 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:id = "@+id/item_layout"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_height="100dp"
     android:background="@drawable/writing_space"
     android:layout_margin="16dp">
+
+    <ImageView
+        android:id = "@+id/image_view_thumbnail_here"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id = "@+id/text_view_title_here"
